GitOps/clusters/cyberhawk-talos-k8s/3-apps/patchmon/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patchmon
spec:
  selector:
    app: patchmon
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
