GitOps/clusters/cyberhawk-talos-k8s/3-apps/patchmon/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: patchmon
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - patchmon.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: patchmon
          port: 3000
